# TomTom

./: .gitignore  README.md  create_knowledge_graph.py  docker-compose.yml  pyproject.toml
adapters/: dpmind_adapter.py  genome_adapter.py  kegg_adapter.py  miRBase_adapter.py  oma_adapter.py  planteome_adapter.py  plantregmap_adapter.py  pnrd_adapter.py  string_adapter.py  tardb_adapter.py
config/: biocypher_config.yaml  schema_config.yaml
scripts/: Uniprot_ID_mapping.py  download_databases.py
