[tool.poetry]
name = "TomTom"
version = "0.1.0"
description = "S. lycopersicum knowledge graph based on the BioCypher Template"
authors = [
    "Maxime Multari <maxime.multari@inrae.fr>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "0.9.3"
openpyxl = "^3.1.2"
requests = "^2.31.0"
biopython = "^1.84"
omadb = "2.2.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
